# simulador-ospf

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  tidy.sh
data/: 15_grid.json  15_mesh.json  15_ring_stress.json  25_mesh_denso.json  25_random_sparse.json  30_mesh.json  50_grid.json  50_mesh_stress.json  standard.json  topologia.json
docs/: backlog.md  dicionario_dados.md  escopo.md
docs/devlog/: 2026-06-03.md  2026-06-04.md  2026-06-06.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  template.md
include/: links.hpp  logger.hpp  mensagens.hpp  roteador.hpp  simulador.hpp
src/: logger.cpp  main.cpp  roteador.cpp  simulador.cpp
tests/: CMakeLists.txt  test_ciclo_vida.cpp  test_dijkstra.cpp  test_ospf_convergencia.cpp  test_ressureicao.cpp  test_simulacao.cpp  test_threads.cpp
